--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "test__app",
+  "name": "empty-project",
   "version": "1.0.0",
-  "description": "\"# test__app\"",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack serve",
-    "watch": "webpack --watch",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/npankovich/test__app.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/npankovich/test__app/issues"
+  "scripts": {
+    "build": "webpack --mode development",
+    "start": "webpack serve --mode development --open",
+    "watch": "webpack --mode development --watch"
   },
-  "homepage": "https://github.com/npankovich/test__app#readme",
+  "dependencies": {
+    "jquery": "^3.6.0"
+  },
   "devDependencies": {
-    "webpack": "^5.36.0",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "postcss-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
